# linux-mcp-server

./: pyproject.toml
.gitlab/ci/: eval-gatekeeper.yml
docs/: config-reference.md  guarded-command-execution.md  install.md
eval/gatekeeper/: README.md  standard-evals.sh
src/linux_mcp_server/: config.py
src/linux_mcp_server/gatekeeper/: anthropic_client.py  check_run_script.py  gcp_auth.py  gemini_client.py  http_utils.py  llm.py  openai_client.py  openrouter_client.py  schema.py
tests/: conftest.py  test_config.py
tests/gatekeeper/: test_anthropic_client.py  test_check_run_script.py  test_gcp_auth.py  test_gemini_client.py  test_http_utils.py  test_llm.py  test_openai_client.py  test_openrouter_client.py  test_schema.py
tests/tools/: test_run_script.py
